--- a/data/fixtures/reviews.yml
+++ b/data/fixtures/reviews.yml
@@ -5,6 +5,11 @@
 #   2 pending
 #   3 not approved
 #
+# review entities:
+#   1 product
+#   2 customer
+#   3 category
+#
 
 reviews:
   entity: review/review
@@ -15,7 +20,7 @@ reviews:
     nickname: fixture_string
     customer_id: ~
     created_at: fixture_past_date
-    entity_id: fixture_product_entity_id
+    entity_id: 1 # product
     entity_pk_value: fixture_product_id
     status_id: 1 # approved
     iterate: 1
@@ -23,7 +28,8 @@ reviews:
   entries:
     userless:
       <<: *reviews_base
-      iterate: 300
+      iterate: numeric_prompt
     userful:
       <<: *reviews_base
-      iterate: fixture_customer
+      customer_id: fixture_customer
+      iterate: numeric_prompt
