colorization lib, plus magento-layout gains colors

--- a/data/defaults.php.sample
+++ b/data/defaults.php.sample
@@ -3,3 +3,4 @@ $email = "youremail@gmail.com";
 $author = "yourname <$email>";
 $company = "ABC";
 $default_path = "/path/to/some/magento/project";
+$colorize_output = true;
